Modification in admin,agent,department and widget v1.0

--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -61,7 +61,7 @@
 
                                             <td>
                                                 <!-- Single button -->
-                                                <div class="btn-group" [appDropdown]="'open'">
+                                                <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
                                                     <button type="button" class="btn btn-default dropdown-toggle"
                                                             data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
