--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="col-md-6" *ngIf="selectedAdmin.value > 0">
-                    <div class="col-md-4">
+
                     <div class="form-group">
                     <label class="control-label" for="department">
                       Department for Agent
@@ -60,16 +60,14 @@
                             required
                     >
                       <option selected value="0">Choose...</option>
-                      <option [value]="item.id"
-                              *ngFor="let item of (afterLoginState | async).department.list; let i = index"
-                      >
+                        <option [value]="item.id" *ngFor="let item of (afterLoginState | async).department.list; let i = index">
                         {{item.department_name}}
                       </option>
+                        <option value="99999991999999" style="font-weight: bold;">&#43; Create Department </option>
                     </select>
                   </div>
-                    </div>
-                    <div class="col-md-2">
-                        <button class="btn btn-warning btn-md" style="margin-top: 25px;" type="button" (click)="createDepartment(template)"> Create Department</button>
+                    <div class="hide">
+                        <a class="btn btn-warning btn-md" style="margin-top: 25px;" type="button" (click)="createDepartment(template)" id="createDepartment"> Create Department</a>
                     </div>
                 </div>
 
