fix chat frontend v1.7

--- a/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
+++ b/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
@@ -3,7 +3,7 @@
         <h1>Resolve Chats</h1>
         <ol class="breadcrumb">
             <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="#">Resolve Chats</a></li>
+            <li><a href="javascript:void(0)">Resolve Chats</a></li>
             <li class="active">Chat</li>
         </ol>
     </section>
