--- a/src/app/core/layout/inner-pages/chat/pending/pending.component.html
+++ b/src/app/core/layout/inner-pages/chat/pending/pending.component.html
@@ -3,7 +3,7 @@
     <h1>Pending Chats</h1>
     <ol class="breadcrumb">
       <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Pending Chats</a></li>
+      <li><a href="javascript:void(0)">Pending Chats</a></li>
       <li class="active">Chat</li>
     </ol>
   </section>
