--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -50,8 +50,8 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li> <a (click)="onEditAgent(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>
-                      <li *ngIf="item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>
-                      <li *ngIf="item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>
+                      <!--<li *ngIf="item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>-->
+                      <!--<li *ngIf="item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>-->
                     </ul>
                   </div>
                 </td>
