--- a/src/app/core/layout/inner-pages/chat/rejected/rejected.component.css
+++ b/src/app/core/layout/inner-pages/chat/rejected/rejected.component.css
@@ -99,3 +99,12 @@ h2{
 .direct-chat-messages {
     height: 650px;
 }
+
+@media screen and (max-width:768px){
+    .direct-chat-messages {
+        height: 300px;
+    }
+    .chat-list ul{
+        max-height: 200px;
+    }
+}
