--- a/src/app/core/layout/inner-pages/chat/resolve/resolve.component.css
+++ b/src/app/core/layout/inner-pages/chat/resolve/resolve.component.css
@@ -173,7 +173,14 @@ ul.super-sub li:hover{background: #e1e3e9;}
     pointer-events: none;
 }
 
-
+@media screen and (max-width:768px){
+    .direct-chat-messages {
+        height: 300px;
+    }
+    .chat-list ul{
+        max-height: 200px;
+    }
+}
 
 
 
