--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.css
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.css
@@ -100,3 +100,12 @@ h2{
 .direct-chat-messages {
     height: 500px;
 }
+
+@media screen and (max-width:768px){
+    .direct-chat-messages {
+        height: 300px;
+    }
+    .chat-list ul{
+        max-height: 200px;
+    }
+}
