Added supported polyfills for IOS v1.3

--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -57,7 +57,7 @@
                                             <td>{{item.email}}</td>
                                             <td>{{item.phone}}</td>
                                             <td>{{item.twilio_info?.twilio_sid}}</td>
-                                            <td>{{ item.created_at }}</td>
+                                            <td>{{ item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
 
                                             <td>
                                                 <!-- Single button -->
