--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -41,7 +41,7 @@
                 <td>{{item.get_company?.company}}</td>
                 <td>{{item.email}}</td>
                 <td>{{item.phone}}</td>
-                <td>{{item.created_at | date}}</td>
+                <td>{{item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
                 <td>
                   <!-- Single button -->
                   <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
