--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -58,7 +58,7 @@
                                             </td>
                                             <!--<td></td>-->
                                             <!--<td></td>-->
-                                            <td>{{item.created_at | date }}</td>
+                                            <td>{{item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
                                             <td>
                                                 <!-- Single button -->
                                                 <div class="btn-group" [appDropdown]="'open'" disable-hover="true">
