Added supported polyfills for IOS v1.4

--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.css
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.css
@@ -108,4 +108,10 @@ h2{
     .chat-list ul{
         max-height: 200px;
     }
+
+@media screen and (max-width:1024px){
+    .box{
+        overflow-x: scroll;
+    }
+}
 }
