--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -17,7 +17,7 @@
           <!-- /.box-header -->
           <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"> </div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
-              <table id="contactListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+              <table id="contactListTable" class="table table-bordered table-hover dataTable444444444444444444" role="grid" aria-describedby="example2_info">
               <thead>
               <tr role="row">
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
